--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/index.css">
-    <title>React</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="app.js" charset="UTF-8"></script>
+    <title>Tetris JS</title>
 </head>
 <body>
 <header>
@@ -226,12 +227,6 @@
 
     </div>
 </main>
-    
-<!-- Load React. -->
-<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
 
 </body>
 </html>
