Restructure project with modern JS practices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./style/index.css">
     <script src="app.js" charset="UTF-8"></script>
     <title>Tetris JS</title>
 </head>
@@ -13,6 +13,7 @@
 <main>
     <h3>Score : <span id="score-board">0</span></h3>
     <button id="start-button">Start/Stop</button>
+    <canvas id="game-board" class="board"></canvas>
     <div class="grid">
         <div></div>
         <div></div>
