--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <button id="start-button">Start | Stop</button>
         </div>
     </div>
-</main>
-</body>
 <script src="app.js" type="text/javascript"></script>
-<script src="./js/constants.mjs" type="module"></script>
+<script src="./js/constants.js" type="module"></script>
 <script src="./js/board.js" type="module"></script>
 <script src="./js/piece.js" type="module"></script>
+</main>
+</body>
 </html>
