Attempt to correct error handling modules

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
 </main>
 <script src="./app.js" type="text/javascript"></script>
-<script src="./js/constants.js" type="module"></script>
-<script src="./js/board.js" type="module"></script>
-<script src="./js/piece.js" type="module"></script>
+<script type="module" src="./js/constants.js" ></script>
+<script type="module" src="./js/board.js"></script>
+<script type="module" src="./js/piece.js"></script>
 </body>
 </html>
