--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <canvas id="game-board" class="board"></canvas>
         <div class="panel">
             <h3>Score : <span class="score">0</span></h3>
-            <button id="start-button">Start | Stop</button>
+            <button onclick="play()" id="start-button">Start | Stop</button>
         </div>
     </div>
 </main>
-<script src="./app.js" type="text/javascript"></script>
-<script type="module" src="./js/constants.js" ></script>
-<script type="module" src="./js/board.js"></script>
-<script type="module" src="./js/piece.js"></script>
+<script type="module" src="./app.js" type="text/javascript"></script>
+<script type="module" src="./js/constants.js" type="text/javascript" ></script>
+<script type="module" src="./js/board.js" type="text/javascript"></script>
+<script type="module" src="./js/pieces.js" type="text/javascript"></script>
 </body>
 </html>
