--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         </div>
     </div>
 </main>
-<script type="module" src="./app.js" type="text/javascript"></script>
+<script defer type="module" src="./app.js" type="text/javascript"></script>
 </body>
 </html>
