--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <canvas id="game-board" class="board"></canvas>
         <div class="panel">
             <h3>Score : <span class="score">0</span></h3>
-            <button type="button" id="start-button">Start | Stop</button>
+            <button type="button" class="start-button">Start | Stop</button>
         </div>
     </div>
 </main>
-<script defer type="module" src="./app.js" type="text/javascript"></script>
+<script type="module" language="javascript" src="/app.js"></script>
+<script type="module" src="/js/board.js" ></script>
+<script type="module" src="/js/constants.js"></script>
+<script  type="module" src="/js/pieces.js"></script>
 </body>
 </html>
